# retailops-dq-pipeline

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.es.md  README.md  docker-compose.yml  pyproject.toml  release-please-config.json
.github/workflows/: azure-deploy-manual.yml  ci.yml  codeql.yml  pages.yml  release-please.yml
configs/: azure.sample.yaml  ci.yaml  docker.yaml  local.yaml
contracts/: channels.yaml  customers.yaml  order_items.yaml  orders.yaml  products.yaml  stores.yaml
docs/: architecture.es.md  architecture.md  azure-deployment.md  cost-control.md  data-contracts.md  data-quality.md  demo.md  docker.md  github-actions.md  lineage.md  local-development.md  observability.md  portfolio-packaging.md  security.md
docs/adr/: 0001-local-first-cloud-ready-architecture.md  0002-duckdb-polars-pandera-stack.md  0003-azure-container-apps-job-target.md  0004-no-real-cloud-resources-during-generation.md
examples/demo/: README.md  data_quality_report.json  lineage.json  sample_data_quality_report.md  sample_gold_metrics_summary.md  sample_lineage.md
infra/azure/: README.md  main.bicep  parameters.sample.json
infra/azure/modules/: container-app-job.bicep  container-apps-environment.bicep  container-registry.bicep  log-analytics.bicep  storage.bicep
infra/azure/scripts/: deploy.ps1  deploy.sh  what-if.ps1  what-if.sh
scripts/: smoke_test.ps1  smoke_test.sh  validate_docker.ps1  validate_docker.sh  validate_local.ps1  validate_local.sh
site/: README.md  index.html
sql/gold/: dq_summary.sql  order_kpis.sql  revenue_by_channel.sql  revenue_by_day.sql  revenue_by_store.sql  top_products.sql
sql/silver/: create_silver_dimensions.sql  create_silver_order_items.sql  create_silver_orders.sql
src/retaildq/: __init__.py  cli.py  config.py  logging.py  paths.py
src/retaildq/contracts/: __init__.py  loader.py  schemas.py
src/retaildq/demo/: __init__.py  site.py
src/retaildq/generator/: synthetic_retail.py
src/retaildq/lakehouse/: __init__.py  gold.py  incremental.py  pipeline.py  raw.py  silver.py
tests/: conftest.py
tests/data/: test_anomaly_checks.py  test_contracts.py  test_quality_thresholds.py  test_referential_integrity.py
tests/integration/: test_demo_command.py  test_gold_metrics.py  test_pipeline_run.py  test_site_build.py
tests/unit/: test_config.py  test_contract_loader.py  test_generator.py  test_incremental.py  test_quality_checks.py  test_quarantine.py
(+12 files in other folders)
