[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "retaildq-lakehouse"
version = "0.2.0"
description = "Local-first, cloud-ready retail data quality lakehouse pipeline using DuckDB, Polars, Pandera, and Typer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "RetailDQ Contributors" }
]
keywords = [
  "data-engineering",
  "lakehouse",
  "duckdb",
  "polars",
  "data-quality",
  "azure",
  "container-apps",
  "portfolio"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Database",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
  "duckdb>=1.0.0",
  "jinja2>=3.1.4",
  "pandera[polars]>=0.20.0",
  "polars>=1.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.1",
  "rich>=13.7.1",
  "typer>=0.12.3"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "types-PyYAML>=6.0.12.20240311"
]

[project.urls]
Homepage = "https://github.com/BGIA1/retailops-dq-pipeline"
Documentation = "https://github.com/BGIA1/retailops-dq-pipeline/tree/main/docs"
Issues = "https://github.com/BGIA1/retailops-dq-pipeline/issues"

[project.scripts]
retaildq = "retaildq.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "PT",
  "PTH",
  "SIM",
  "UP",
  "W"
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
pretty = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
  "duckdb.*",
  "pandera.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
branch = true
source = ["retaildq"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70
